fix: server side logouts
