# libs/domains/identity/backend/feature-auth/src/lib/dto/auth/logout.dto.ts
@@ -1,0 +1,7 @@
+import { IsBoolean, IsOptional } from 'class-validator';
+
+export class LogoutDto {
+  @IsOptional()
+  @IsBoolean()
+  invalidateAllSessions?: boolean;
+}
